--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
+    "immer": "^9.0.15",
+    "md5": "^2.3.0",
     "next": "12.3.1",
+    "next-progress": "^2.2.0",
+    "nuka-carousel": "^5.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-immer": "^0.7.0"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
